Fixed HomePage navbar and spacing issues with FB icon

--- a/clinispanhealth-app/src/HomePage.css
+++ b/clinispanhealth-app/src/HomePage.css
@@ -9,7 +9,15 @@ body {
 
 .navbar {
   display: flex;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: white;
+}
+
+#left-navbar {
+  display: flex;
+  flex-direction: row;    
+  justify-content: flex-start;
   background-color: white;
 }
 
@@ -23,13 +31,14 @@ body {
   margin-right: 2vh;
   margin-left: 2vh;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 75px;
   height: 75px;
   border: 0;
   background-color: #059EC5;
   border-radius: 50%;
   justify-content: center;
-  align-items: center;
 }
 
 #contact:hover {
@@ -87,11 +96,6 @@ h3 {
   margin-right: 1vw;
 }
 
-.h3 {
-  margin-left: 1vw;
-  margin-right: 1vw;
-}
-
 #subtitle {
   margin-top: 1vh;
   width: 90%;
@@ -118,7 +122,6 @@ h3 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* justify-content: center; */
 }
 
 p {
@@ -161,15 +164,62 @@ p {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+#db2-img {
+  padding-left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#db2-img-container {
+  display: flex;
+  height: 80%;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#db2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 80%;
+}
+
 #db3 {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
+  width: 90%;
+  height: 80%;
+}
 
+.h3 {
+  margin-left: 1vw;
+  margin-right: 1vw;
+}
+
+.join {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;  
+}
+
+#hands-img {
+  padding-left: 0;
+  width: 100%;
+  height: 68%;
+}
+
+#fb {
+  width: 266px;
+  height: 200px;
+  padding-left: 0;
 }
 
 #FbBtn {
-  height: 20%;
-  width: 30%;
+  height: 6vh;
+  width: 80%;
   background-color: #059EC5;
   border: 0;
   border-radius: 5px;
@@ -178,6 +228,7 @@ p {
   font-size: medium;
   font-weight: 100;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  margin-top: 1vh;
 }
 
 #FbBtn:hover {
@@ -199,6 +250,6 @@ button:hover {
   background-color: #989898;
 }
 
-img {
+/* img {
   padding-left: 2vw;
-}
+} */
